[gd_scene load_steps=2 format=2]

[ext_resource path="res://AAI Case/scenes/AATestimonyButtons.gd" type="Script" id=1]

[node name="TestimonyButtons" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 256.0
margin_bottom = 192.0

[node name="Press_Present" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 20.0

[node name="PressBtn" type="Button" parent="VBoxContainer/Press_Present"]
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Press"

[node name="PresentBtn" type="Button" parent="VBoxContainer/Press_Present"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Present"

[node name="Left_Right" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 256.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LeftButton" type="Button" parent="VBoxContainer/Left_Right"]
margin_right = 126.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<"

[node name="RightButton" type="Button" parent="VBoxContainer/Left_Right"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = ">"

[connection signal="pressed" from="VBoxContainer/Press_Present/PressBtn" to="." method="_on_PressBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Press_Present/PresentBtn" to="." method="_on_PresentBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Left_Right/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Left_Right/RightButton" to="." method="_on_RightButton_pressed"]
